--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
       <meta charset="UTF-8">
       <link rel="stylesheet" href="stylesheets/grid.css" />
       <link rel="stylesheet" href="stylesheets/lighthouse.css" />
+      <link rel="stylesheet" href="stylesheets/gallery.css" />
       <link rel="stylesheet" href="stylesheets/index.css" />
    </head>
    <body>
+      <div id='photo-gallery-header'>
+         <h1>Flickr Image Gallery</h1>
+         <h3>Search for images below</h3>
+         <input id='gallery-search' placeholder="type something to get started">
 
+         <!-- Loading Icon -->
+         <div id="gallery-loading-icon" title="2">
+           <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              width="30px" height="30px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+           <path fill="#000" d="M43.935,25.145c0-10.318-8.364-18.683-18.683-18.683c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615c8.072,0,14.615,6.543,14.615,14.615H43.935z">
+             <animateTransform attributeType="xml"
+               attributeName="transform"
+               type="rotate"
+               from="0 25 25"
+               to="360 25 25"
+               dur="0.6s"
+               repeatCount="indefinite"/>
+             </path>
+           </svg>
+         </div>
+         <!-- End Loading Icon -->
+
+      </div>
       <div id='photo-grid'></div>
       <div id='photo-lighthouse-overlay'></div>
       <div id='photo-lighthouse'>
@@ -17,10 +40,10 @@
             <img class='photo-lighthouse-display-image'></img>
             <img class='photo-lighthouse-display-image'></img>
          </div>
-         <div id='photo-lighthouse-display-text'>Ay Lmao</div>
-         <div id='photo-lighthouse-prev' class='photo-lighthouse-nav'>Prev</div>
-         <div id='photo-lighthouse-thumbnails-container'></div>
-         <div id='photo-lighthouse-next' class='photo-lighthouse-nav'>Next</div>
+         <div id='photo-lighthouse-display-text'></div>
+         <div id='photo-lighthouse-prev' class='photo-lighthouse-nav'><img src="images/arrow_left.svg"></div>
+         <div id='photo-lighthouse-next' class='photo-lighthouse-nav'><img src="images/arrow_right.svg"></div>
+         <div id='photo-lighthouse-close'><img src="images/close.svg"></div>
       </div>
 
       <script src="javascripts/utility.js"></script>
