--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
       </div>
       <div id='photo-grid'></div>
+      <div id='gallery-load-more'>Load More</div>
       <div id='photo-lighthouse-overlay'></div>
       <div id='photo-lighthouse'>
          <div id='photo-lighthouse-display'>
