cleaned up styles

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
    <body>
       <div id='photo-gallery-header'>
          <h1>Flickr Image Gallery</h1>
-         <h3>Search for images below</h3>
-         <input id='gallery-search' placeholder="type something to get started">
+         <h3>Search for images on Flickr</h3>
+         <input id='gallery-search' placeholder="type something to search">
 
          <!-- Loading Icon -->
          <div id="gallery-loading-icon" title="2">
