cleaned up styles

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <div id='photo-gallery-header'>
          <h1>Flickr Image Gallery</h1>
          <h3>Search for images on Flickr</h3>
-         <input id='gallery-search' placeholder="type something to search">
+         <input id='gallery-search' placeholder="type something to start searching">
 
-         <!-- Loading Icon -->
+         <!-- Loading Icon from http://codepen.io/aurer/pen/jEGbA-->
          <div id="gallery-loading-icon" title="2">
            <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
               width="30px" height="30px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
@@ -36,7 +36,7 @@
       <div id='photo-lighthouse-overlay'></div>
       <div id='photo-lighthouse'>
          <div id='photo-lighthouse-display'>
-            <!-- load prev and next image to speed things up -->
+            <!-- load prev and next image in the background to speed up image loading -->
             <img class='photo-lighthouse-display-image'></img>
             <img class='photo-lighthouse-display-image'></img>
             <img class='photo-lighthouse-display-image'></img>
