added comments in css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
    <head>
       <meta charset="UTF-8">
+      <title>Flickr Image Gallery</title>
       <link rel="stylesheet" href="stylesheets/grid.css" />
       <link rel="stylesheet" href="stylesheets/lighthouse.css" />
       <link rel="stylesheet" href="stylesheets/gallery.css" />
