--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="stylesheets/lighthouse.css" />
       <link rel="stylesheet" href="stylesheets/gallery.css" />
       <link rel="stylesheet" href="stylesheets/index.css" />
+      <link rel="icon" type="image/ico" href="images/favicon.ico">
    </head>
    <body>
       <div id='photo-gallery-header'>
